--- a/asset/css/hero.css
+++ b/asset/css/hero.css
@@ -6,7 +6,8 @@
 /*     font-size: 3.5rem; */
     font-weight: 600;
     letter-spacing: -.11rem;
-    font-size: clamp(3.5rem, 10vw, 5rem);
+    font-size: clamp(3.2rem, 9vw, 5rem);
+    /* font-size: 3.2rem; */
 }
 
 .hero__subtitle{
