--- a/asset/css/hero.css
+++ b/asset/css/hero.css
@@ -1,22 +1,21 @@
 .hero{
-    margin-top: 15rem;
+    margin-top: 17rem;
 }
 
 .hero__title{
-/*     font-size: 3.5rem; */
-    font-weight: 600;
+    font-weight: 500;
     letter-spacing: -.11rem;
-    font-size: clamp(3.2rem, 9vw, 5rem);
-    /* font-size: 3.2rem; */
+    font-size: clamp(2.8rem, 8vw, 3.5rem);
+    line-height: 1.2;
+    margin-bottom: .5rem;
 }
 
 .hero__subtitle{
-    /*     font-size: 2.6rem; */
-    margin-top: .3rem;
+    line-height: 1.2;
     color: rgb(145, 145, 145);
     font-weight: 400;
-    letter-spacing: -.025rem;
-    font-size: clamp(2.6rem, 7vw, 3.5rem);
+    letter-spacing: -.03rem;
+    font-size: clamp(2rem, 5.5vw, 2.3rem);
 }
 
 .nav{
@@ -30,8 +29,7 @@
 }
 
 .nav__link{
-/*     font-size: 1.2rem; */
-    font-weight: 500;
+    font-weight: 400;
     letter-spacing: -.025rem;
     padding: .35rem .75rem;
     border-radius: 2rem;
@@ -60,16 +58,15 @@
 }
 
 .hero__about{
-/*     font-size: 1.6rem; */
     margin-top: 2.8rem;
     color: rgb(147, 147, 147);
-    font-weight: 450;
+    font-weight: 400;
     letter-spacing: -.025rem;
     line-height: 1.4;
     display: flex;
     flex-direction: column;
-    gap: 1.2rem;
-    font-size: clamp(1.6rem, 4.5vw, 1.8rem);
+    gap: 1.3rem;
+    font-size: clamp(1.5rem, 4vw, 1.7rem);
 }
 
 .hero__about-text{
