--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,7 +1,7 @@
 :root{
     --white: #FFF;
     --black: #000;  
-    --back-color: rgb(246, 246, 246);
+    --back-color: rgb(255, 255, 255);
     --back-highlighted: rgb(232, 232, 232);
 }
 
@@ -17,14 +17,14 @@ html{
     padding: 0;
 }
 
-img{
+img, video{
     max-width: 100%;
     height: auto;
     display: block;
 }
 
 body{
-    font-family: 'Inter', sans-serif;
+    font-family: "Poppins", sans-serif;
     background-color: var(--back-color);
 }
 
